[gd_scene load_steps=6 format=3 uid="uid://b1ht4d8j2wdk4"]

[ext_resource type="Script" path="res://scenes/game objects/entities/linear/entity_linear.gd" id="1_hbih5"]
[ext_resource type="PackedScene" uid="uid://b5mfjfrj4ocdg" path="res://scenes/effects/particle effect/particle_effect.tscn" id="2_ocbdi"]

[sub_resource type="Animation" id="Animation_epar1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qe35c"]
resource_name = "spawn"
length = 0.05
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j5g3p"]
_data = {
"RESET": SubResource("Animation_epar1"),
"spawn": SubResource("Animation_qe35c")
}

[node name="EntityLinear" type="Area2D" groups=["entity"]]
collision_layer = 32
collision_mask = 17
script = ExtResource("1_hbih5")
particle_effect_scene = ExtResource("2_ocbdi")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j5g3p")
}
autoplay = "spawn"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
